--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
       </form>
 
       <ul class="gallery"></ul>
+      <button type="button" class="btn btn-LM" style="display: none">
+        Load more
+      </button>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
